--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -58,13 +58,23 @@ jobs:
         asset_path: ./src-tauri/target/release/bundle/nsis/pixi-graviton_0.0.0_x64-setup.exe
         asset_name: pixi-graviton_0.0.0_x64-setup.exe
         asset_content_type: application/octet-stream
-    - name: Upload macOS Artifact
+    - name: Upload macOS .app Artifact
       if: matrix.os == 'macos-latest'
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: <path-to-macos-artifact>
-        asset_name: <macos-artifact-name>
+        asset_path: ./src-tauri/target/release/bundle/macos/pixi-graviton.app
+        asset_name: pixi-graviton.app
+        asset_content_type: application/octet-stream
+    - name: Upload macOS .dmg Artifact
+      if: matrix.os == 'macos-latest'
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./src-tauri/target/release/bundle/dmg/pixi-graviton_0.0.0_aarch64.dmg
+        asset_name: pixi-graviton_0.0.0_aarch64.dmg
         asset_content_type: application/octet-stream
