--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -38,6 +38,9 @@ jobs:
         tag_name: ${{ github.ref }}
         release_name: Release ${{ github.ref }}
         draft: true
+    - name: Copy MSI Artifact for Windows
+      if: matrix.os == 'windows-latest'
+      run: cp ./src-tauri/target/release/bundle/msi/pixi-graviton_0.0.0_x64_en-US.msi ./pixi-graviton_0.0.0_x64_en-US.msi
     - name: Upload MSI Artifact
       if: matrix.os == 'windows-latest'
       uses: actions/upload-release-asset@v1
@@ -45,9 +48,12 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./src-tauri/target/release/bundle/msi/pixi-graviton_0.0.0_x64_en-US.msi
+        asset_path: ./pixi-graviton_0.0.0_x64_en-US.msi
         asset_name: pixi-graviton_0.0.0_x64_en-US.msi
         asset_content_type: application/octet-stream
+    - name: Copy NSIS Artifact for Windows
+      if: matrix.os == 'windows-latest'
+      run: cp ./src-tauri/target/release/bundle/nsis/pixi-graviton_0.0.0_x64-setup.exe ./pixi-graviton_0.0.0_x64-setup.exe
     - name: Upload NSIS Artifact
       if: matrix.os == 'windows-latest'
       uses: actions/upload-release-asset@v1
@@ -55,9 +61,12 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./src-tauri/target/release/bundle/nsis/pixi-graviton_0.0.0_x64-setup.exe
+        asset_path: ./pixi-graviton_0.0.0_x64-setup.exe
         asset_name: pixi-graviton_0.0.0_x64-setup.exe
         asset_content_type: application/octet-stream
+    - name: Copy macOS .app Artifact
+      if: matrix.os == 'macos-latest'
+      run: cp -R ./src-tauri/target/release/bundle/macos/pixi-graviton.app ./pixi-graviton.app
     - name: Upload macOS .app Artifact
       if: matrix.os == 'macos-latest'
       uses: actions/upload-release-asset@v1
@@ -65,9 +74,12 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./src-tauri/target/release/bundle/macos/pixi-graviton.app
+        asset_path: ./pixi-graviton.app
         asset_name: pixi-graviton.app
         asset_content_type: application/octet-stream
+    - name: Copy macOS .dmg Artifact
+      if: matrix.os == 'macos-latest'
+      run: cp ./src-tauri/target/release/bundle/dmg/pixi-graviton_0.0.0_aarch64.dmg ./pixi-graviton_0.0.0_aarch64.dmg
     - name: Upload macOS .dmg Artifact
       if: matrix.os == 'macos-latest'
       uses: actions/upload-release-asset@v1
@@ -75,6 +87,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./src-tauri/target/release/bundle/dmg/pixi-graviton_0.0.0_aarch64.dmg
+        asset_path: ./pixi-graviton_0.0.0_aarch64.dmg
         asset_name: pixi-graviton_0.0.0_aarch64.dmg
         asset_content_type: application/octet-stream
