--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,6 +1,3 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
 name: Node.js CI
 
 on:
@@ -10,7 +7,24 @@ on:
     branches: ["main"]
 
 jobs:
+  create_release:
+    runs-on: ubuntu-latest
+    outputs:
+      upload_url: ${{ steps.create_release.outputs.upload_url }}
+    steps:
+      - uses: actions/checkout@v4
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          draft: true
+
   build:
+    needs: create_release
     runs-on: ${{ matrix.os }}
 
     strategy:
@@ -28,15 +42,7 @@ jobs:
           cache: "npm"
       - run: npm install
       - run: npm run tauri build
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          draft: true
+
       - name: Copy MSI Artifact for Windows
         if: matrix.os == 'windows-latest'
         run: cp ./src-tauri/target/release/bundle/msi/pixi-graviton_0.0.0_x64_en-US.msi ./pixi-graviton_0.0.0_x64_en-US.msi
@@ -46,7 +52,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          upload_url: ${{ needs.create_release.outputs.upload_url }}
           asset_path: ./pixi-graviton_0.0.0_x64_en-US.msi
           asset_name: pixi-graviton_0.0.0_x64_en-US.msi
           asset_content_type: application/octet-stream
@@ -59,7 +65,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          upload_url: ${{ needs.create_release.outputs.upload_url }}
           asset_path: ./pixi-graviton_0.0.0_x64-setup.exe
           asset_name: pixi-graviton_0.0.0_x64-setup.exe
           asset_content_type: application/octet-stream
@@ -75,7 +81,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          upload_url: ${{ needs.create_release.outputs.upload_url }}
           asset_path: ./pixi-graviton.app.zip
           asset_name: pixi-graviton.app.zip
           asset_content_type: application/zip
@@ -88,7 +94,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          upload_url: ${{ needs.create_release.outputs.upload_url }}
           asset_path: ./pixi-graviton_0.0.0_aarch64.dmg
           asset_name: pixi-graviton_0.0.0_aarch64.dmg
           asset_content_type: application/octet-stream
